fix(style): change gap and padding to match the desired style

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 1rem;
 }
 
 .logo {
@@ -18,8 +19,10 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  padding: 0;
+  gap: 1rem;
 }
 
 a {
